<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
        <item android:title="@string/account">
            <menu>
            <item
                android:id="@+id/nav_disconnect"
                android:icon="@drawable/ic_email"
                android:title="@string/toDisconnect">

            </item>


            </menu>
        </item>
    <item android:title="@string/contact">
        <menu>
            <item
                android:id="@+id/nav_contact"
                android:icon="@drawable/ic_share"
                android:title="@string/contact" />
            <item
                android:id="@+id/nav_client"
                android:icon="@drawable/ic_share"
                android:title="@string/customerService" />
        </menu>
    </item>


</menu>