<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_connect"
            android:icon="@drawable/ic_email"
            android:title="@string/connect">

        </item>

            <item
                android:id="@+id/nav_sign_in"
                android:icon="@drawable/ic_email"
                android:title="@string/createAccount" />
    </group>
    <item android:title="@string/contact">
        <menu>
            <item
                android:id="@+id/nav_contact"
                android:icon="@drawable/ic_share"
                android:title="@string/contact" />
            <item
                android:id="@+id/nav_client"
                android:icon="@drawable/ic_share"
                android:title="@string/customerService" />
        </menu>
    </item>


</menu>