<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.core.widget.NestedScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/nameTextView"
            android:layout_width="235dp"
            android:layout_height="25dp"
            android:layout_marginStart="45dp"
            android:layout_marginTop="17dp"
            android:autoLink="web"
            android:clickable="true"
            android:drawableStart="@drawable/website"
            android:drawablePadding="3dp"
            android:focusable="true"
            android:padding="3dp"
            android:text="@string/app_name_website"
            app:drawableTint="#353333"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.32"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/contactTextView"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/phoneNumber"
            android:layout_width="235dp"
            android:layout_height="25dp"
            android:layout_marginStart="45dp"
            android:autoLink="phone"
            android:clickable="true"
            android:drawableStart="@android:drawable/stat_sys_phone_call"
            android:drawablePadding="3dp"
            android:focusable="true"
            android:padding="3dp"
            android:text="@string/phoneContact"
            android:textColorLink="#494141"
            android:textStyle="normal"
            app:drawableTint="#3A3737"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.32"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nameTextView"
            app:layout_constraintVertical_bias="0.123" />

        <TextView
            android:id="@+id/emailTextView"
            android:layout_width="235dp"
            android:layout_height="25dp"
            android:layout_marginStart="45dp"
            android:layout_marginTop="36dp"
            android:clickable="true"
            android:drawableStart="@android:drawable/ic_menu_send"
            android:focusable="true"
            android:padding="3dp"
            android:text="@string/contact_data"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.328"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nameTextView"
            app:layout_constraintVertical_bias="0.194" />

        <TextView
            android:id="@+id/aledWebTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/cinzel"
            android:text="@string/titleALEDWeb"
            android:textColor="@color/colorConnect"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.536"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/aboutUsTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/cinzel"
            android:text="@string/titleAboutUs"
            android:textColor="@color/colorConnect"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/webSiteDescriptionTextView"
            app:layout_constraintVertical_bias="0.066" />

        <TextView
            android:id="@+id/customerServiceTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="52dp"
            android:fontFamily="@font/cinzel"
            android:shadowColor="#1C1515"
            android:text="@string/titleCustomerService"
            android:textColor="@color/colorConnect"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.567"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/aboutUsTextView" />

        <TextView
            android:id="@+id/contactTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/cinzel"
            android:text="@string/titleContact"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@color/colorConnect"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/generalPolicyTextView"
            app:layout_constraintVertical_bias="0.14" />

        <TextView
            android:id="@+id/webSiteDescriptionTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:padding="10dp"
            android:text="@string/webSiteDescription"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/aledWebTextView" />

        <TextView
            android:id="@+id/generalPolicyTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="17dp"
            android:text="@string/generalPolicy"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.523"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/myAccountTextView"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/myAccountTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/myAccount"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.436"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/informationTextView" />

        <TextView
            android:id="@+id/informationTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="17dp"
            android:text="@string/contactInfo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.434"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/welcomeText" />

        <TextView
            android:id="@+id/welcomeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/faq"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.523"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/customerServiceTextView" />
    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>