<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".StarActivity">

    <ImageView
        android:id="@+id/starImageView"
        android:layout_width="396dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="76dp"
        android:contentDescription="@string/starToFollow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/testFollowLineTextView"
        app:srcCompat="@drawable/star" />

    <TextView
        android:id="@+id/testFollowLineTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="68dp"
        android:text="@string/testFollowLine"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/nextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/next"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.982"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/starImageView"
        app:srcCompat="@drawable/arrow_right" />

    <TextView
        android:id="@+id/startTextColor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start"
        android:textColor="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/testFollowLineTextView" />

    <Button
        android:id="@+id/emergencyCallButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/emergencyCall"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/starImageView" />

    <Button
        android:id="@+id/videoButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="59dp"
        android:text="@string/camera"
        app:layout_constraintEnd_toStartOf="@+id/nextButton"
        app:layout_constraintStart_toEndOf="@+id/emergencyCallButton"
        app:layout_constraintTop_toBottomOf="@+id/starImageView" />

    <VideoView
        android:id="@+id/videoView"
        android:layout_width="166dp"
        android:layout_height="87dp"
        android:layout_marginStart="18dp"
        android:layout_marginTop="88dp"
        android:layout_marginEnd="80dp"
        app:layout_constraintEnd_toStartOf="@+id/videoButton"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/starImageView" />

    <FrameLayout
        android:id="@+id/camera_preview"
        android:layout_width="120dp"
        android:layout_height="116dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="43dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/videoView"
        app:layout_constraintTop_toBottomOf="@+id/videoButton">

    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>