<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:theme="@style/AppTheme"
    tools:context=".HomeConnectedActivity">


    <TextView
        android:id="@+id/connectedTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:text="@string/welcomeConnected"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="fill_parent"
        android:layout_height="100dp"
        android:background="#7FC7E4"
        android:orientation="horizontal"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">

        <ImageButton
            android:id="@+id/historyButton"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:background="#8CB5D5"
            android:contentDescription="@string/history"
            android:orientation="horizontal"
            android:src="@drawable/news_logo"
            tools:layout_editor_absoluteX="1dp"
            tools:layout_editor_absoluteY="578dp" />

        <ImageButton
            android:id="@+id/homeButton"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#8CB5D5"
            android:contentDescription="@string/goHomePage"
            android:orientation="horizontal"
            android:src="@drawable/house" />

        <ImageButton
            android:id="@+id/mapButton"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:background="#8CB5D5"
            android:contentDescription="@string/seeMap"
            android:orientation="horizontal"
            android:src="@drawable/map_logo"
            tools:layout_editor_absoluteX="1dp"
            tools:layout_editor_absoluteY="578dp" />

    </LinearLayout>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="188dp"
        android:foregroundGravity="center"
        android:gravity="center_horizontal"
        android:text="@string/vous_vous_tes_correctement_connect"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/connectedTitle" />

</androidx.constraintlayout.widget.ConstraintLayout>